# coco_utils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  coco_file_utils.py  coco_labels_utils.py  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
coco_utils/: README.md  __init__.py  coco_file_utils.py  coco_labels_utils.py  coco_viz_utils.py  exceptions.py  logger.py
datasets/: convert_sleap_to_coco.py
refine/: __init__.py  refine_boxes.py  refine_utils.py
tests/: __init__.py  conftest.py  test_coco_file_utils.py  test_coco_viz_utils.py
